--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
+* {
+  font-family: "Playfair Display", serif;
+}
+
 .vv-container {
-  margin-right: 50%;
-  display: flex;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .vv-image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
+  width: 100%;
   height: auto;
 }
 
-h1 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+button {
+  background: none !important;
+  border: none;
+  text-decoration: none;
 }
