--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,97 @@
   font-family: "Playfair Display", serif;
 }
 
-.vv-container {
-  display: inline-flex;
+/* home */
+
+.welcome-container {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.vv-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2em;
+}
+
 .vv-image {
-  width: 100%;
-  height: auto;
+  width: auto;
+  max-height: 200px;
 }
 
 button {
   background: none !important;
   border: none;
   text-decoration: none;
+}
+
+/* contact */
+
+.contact-page {
+  display: block;
+  margin: 2em;
+  overflow: auto;
+}
+
+.contact-page-style {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  border: 2px double #000;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  padding: 1em;
+}
+
+ul {
+  justify-content: space-around;
+  list-style: none;
+}
+
+a {
+  color: black;
+}
+
+ul.contact-list {
+  display: block;
+  line-height: 2em;
+  text-align: center;
+}
+
+.contact-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-div {
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-button {
+  padding: 5px 0px;
+  width: 15%;
+  background-color: grey;
+  border-radius: 30px;
+  box-shadow: 6px 6px 10px darkgrey;
+}
+
+.contact-button:hover {
+  box-shadow: 6px 8px 12px darkgrey;
+}
+
+/* footer */
+.footer-link {
+  font-size: 25px;
+}
+
+.footer-link:hover {
+  font-size: 33px;
+  text-shadow: 8px 10px 16px var(--hoverColor);
 }
