--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ button {
 
 .contact-page {
   display: block;
-  margin: 2em;
+  margin: 4em;
   overflow: auto;
 }
 
@@ -48,7 +48,9 @@ button {
 }
 
 ul {
-  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  /* justify-content: space-around; */
   list-style: none;
 }
 
@@ -77,9 +79,9 @@ ul.contact-list {
 
 .contact-button {
   padding: 5px 0px;
-  width: 15%;
+  width: 50%;
   background-color: grey;
-  border-radius: 30px;
+  border-radius: 25px;
   box-shadow: 6px 6px 10px darkgrey;
 }
 
@@ -95,4 +97,15 @@ ul.contact-list {
 .footer-link:hover {
   font-size: 33px;
   text-shadow: 8px 10px 16px var(--hoverColor);
+}
+
+@media only screen and (max-width: 480px) {
+  .nav-link {
+    font-size: 1em;
+  }
+
+  .contact-button {
+    padding: 10px 10px;
+    width: 30%;
+  }
 }
