--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,27 @@
   font-family: "Playfair Display", serif;
 }
 
+main {
+  background-color: rgb(255, 243, 227);
+}
+
+figure {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+p {
+  margin-bottom: 0;
+}
+
 /* home */
 
 .welcome-container {
@@ -30,49 +51,62 @@ button {
 
 /* about */
 
-.about-container {
+.intro-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.about-paragraph {
+.intro-paragraph {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   margin: 2em;
   padding: 2em;
   border: black double 4px;
+  background-color: white;
+}
+
+.about-right {
+  margin-right: 2em;
 }
 
 .makeup-app-pic {
   width: auto;
-  max-height: 200px;
+  max-height: 250px;
   border: black double 1px;
 }
 
-figure {
-  margin: 0;
+.my-intro {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 2em;
+  padding: 2em;
+  border: black double 4px;
+  background-color: white;
 }
 
-h3 {
-  margin: 0;
+.rainbow-eyeshadow-pic {
+  width: auto;
+  max-height: 250px;
+  border: black double 1px;
 }
 
-.about-this {
-  margin-right: 2em;
+.about-left {
+  margin-left: 2em;
 }
 
 /* contact */
 
 .contact-page {
-  display: block;
-  margin: 4em;
+  display: flex;
+  justify-content: center;
   overflow: auto;
 }
 
 .contact-page-style {
-  display: inline-block;
+  margin: 2em;
   justify-content: center;
   align-items: center;
   border: 4px double #000;
@@ -80,12 +114,12 @@ h3 {
   height: auto;
   align-items: center;
   padding: 1em;
+  background-color: white;
 }
 
 ul {
   padding: 0;
   margin: 0;
-  /* justify-content: space-around; */
   list-style: none;
 }
 
@@ -113,9 +147,9 @@ ul.contact-list {
 }
 
 .contact-button {
+  background-color: rgb(255, 243, 227);
   padding: 5px 0px;
   width: 50%;
-  background-color: grey;
   border-radius: 25px;
   box-shadow: 6px 6px 10px darkgrey;
 }
@@ -141,14 +175,15 @@ ul.contact-list {
 
   .contact-button {
     padding: 10px 10px;
-    width: 30%;
+    width: 50%;
   }
 
   .about-this {
     font-size: medium;
   }
 
-  .makeup-app-pic {
+  .makeup-app-pic,
+  .rainbow-eyeshadow-pic {
     width: auto;
     max-height: 150px;
   }
