took out unneccessary classes and made nav-links change color on hover

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,16 @@ p {
   margin-bottom: 0;
 }
 
+/* Navbar */
+
+.nav-link {
+  color: black !important;
+}
+
+.nav-link:hover {
+  color: grey !important;
+}
+
 /* home */
 
 .welcome-container {
